--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   }
 }
 
+[class*="col-"] {
+  width: 100%;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -36,3 +40,15 @@
     transform: rotate(360deg);
   }
 }
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-3 {width: 25%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+
